Menu Alignment Fixed

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -351,7 +351,7 @@ input.search-form:hover {
 }
 
 .navbar-inverse .navbar-nav .dropdown-menu:before {
-	position: relative;
+	position: absolute;
 	top: 0;
 }
 
